--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@azure/identity": "^4.4.1",
+    "@azure/openai": "^2.0.0-beta.2",
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.6",
     "@pdfme/common": "^4.3.2",
@@ -21,10 +23,12 @@
     "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.2.0",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
     "next-gallery": "^2.1.0",
+    "openai": "^4.59.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
