--- a/package.json
+++ b/package.json
@@ -11,17 +11,10 @@
   "dependencies": {
     "@azure/identity": "^4.4.1",
     "@azure/openai": "^2.0.0-beta.2",
-    "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.6",
     "@pdfme/common": "^4.3.2",
     "@pdfme/ui": "^4.3.2",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-radio-group": "^1.2.0",
-    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
@@ -36,8 +29,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
