--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.2.0",
     "framer-motion": "^11.5.4",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
     "next-gallery": "^2.1.0",
