--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@pdfme/common": "^4.3.2",
     "@pdfme/ui": "^4.3.2",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@tinymce/tinymce-react": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.2.0",
     "framer-motion": "^11.5.4",
     "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
     "next-gallery": "^2.1.0",
@@ -31,6 +33,7 @@
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "tinymce": "^7.3.0",
     "uuid": "^10.0.0",
     "zustand": "^5.0.0-rc.2"
   },
@@ -38,6 +41,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "postcss": "^8",
